...
    @IBOutlet weak var signingBtn: UIButton!

    override func viewDidLoad() {
        super.viewDidLoad()

        // Do any additional setup after loading the view.
        signInMessageTextField.accessibilityIdentifier = "SignIn.message.textfield"
        signingBtn.accessibilityIdentifier = "SignIn.Done.Button"
        UserDefaultHelper.saveSignedMessage(signedMessage: "")
    }
    
    private func customInit() {
        self.title = RouterHelper.PageTitle.signIn.rawValue
        self.navigationController?.navigationBar.prefersLargeTitles = true
...
