...
    @IBOutlet weak var doneBtn: UIButton!
    private let logger = XCGLogger.default
    
    override func viewDidLoad() {
        super.viewDidLoad()

        privateKeyTextField.accessibilityIdentifier = "setupVC.privatekey.textfield"
        doneBtn.accessibilityIdentifier = "Setup.Done.Button"
        // Do any additional setup after loading the view.
        customInit()
    }
    
    private func customInit() {
        self.title = RouterHelper.PageTitle.setup.rawValue
...
