...

    override func viewDidLoad() {
        super.viewDidLoad()

        // Do any additional setup after loading the view.
        
        verificationMessageTextfield.accessibilityIdentifier = "Validate.message.textfield"
        verifyMessagegBtn.accessibilityIdentifier = "Validate.Done.Button"

        customInit()
    }
    
    private func customInit()  {
        self.title = RouterHelper.PageTitle.verification.rawValue
...
